rm direct adminapi call, use  "app proxy" instead

--- a/snippets/vite-tag.liquid
+++ b/snippets/vite-tag.liquid
@@ -56,7 +56,7 @@
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/features/contacts/ContactDetail.jsx" or path == "react/features/contacts/ContactDetail.jsx" %}
-  <script src="{{ 'ContactDetail.C4Rpm3un.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
+  <script src="{{ 'ContactDetail.DosxcL4c.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
   <link rel="modulepreload" href="{{ 'icons.DHZLH5cu.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'contactsLoader.El1tzQ7g.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.C7O5_bBb.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
@@ -64,7 +64,7 @@
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'Global.DZzDGABG.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'productSlice.CvjiWDym.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'productSlice.2IG3lGDg.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.CvkgFsrJ.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.BYzmSUuc.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.Bb4qSo10.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
@@ -76,10 +76,10 @@
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/features/contacts/ContactList.jsx" or path == "react/features/contacts/ContactList.jsx" %}
-  <script src="{{ 'ContactList.CYZaqQLU.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
+  <script src="{{ 'ContactList.DilmXmAc.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
   <link rel="modulepreload" href="{{ 'icons.DHZLH5cu.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'ContactDetail.C4Rpm3un.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'ContactDetail.DosxcL4c.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'contactsLoader.El1tzQ7g.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.C7O5_bBb.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
@@ -88,7 +88,7 @@
   <link rel="modulepreload" href="{{ 'index.Bb4qSo10.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'utils.CHtjtCvc.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'Global.DZzDGABG.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'productSlice.CvjiWDym.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'productSlice.2IG3lGDg.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'redux-toolkit.modern.DURh381R.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.CvkgFsrJ.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/features/contacts/contactSlice.js" or path == "react/features/contacts/contactSlice.js" %}
@@ -129,10 +129,10 @@
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/features/customers/CustomerList.jsx" or path == "react/features/customers/CustomerList.jsx" %}
-  <script src="{{ 'CustomerList.D6Pw_WRA.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
+  <script src="{{ 'CustomerList.CnpIJSv9.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
   <link rel="modulepreload" href="{{ 'icons.DHZLH5cu.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'ContactDetail.C4Rpm3un.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'ContactDetail.DosxcL4c.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.C7O5_bBb.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'contactsLoader.El1tzQ7g.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
@@ -141,7 +141,7 @@
   <link rel="modulepreload" href="{{ 'index.Bb4qSo10.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'utils.CHtjtCvc.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'Global.DZzDGABG.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'productSlice.CvjiWDym.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'productSlice.2IG3lGDg.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'redux-toolkit.modern.DURh381R.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.CvkgFsrJ.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/features/customers/customerSlice.js" or path == "react/features/customers/customerSlice.js" %}
@@ -164,10 +164,10 @@
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/features/products/ProductList.jsx" or path == "react/features/products/ProductList.jsx" %}
-  <script src="{{ 'ProductList.D6Pw_WRA.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
+  <script src="{{ 'ProductList.CnpIJSv9.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
   <link rel="modulepreload" href="{{ 'icons.DHZLH5cu.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'ContactDetail.C4Rpm3un.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'ContactDetail.DosxcL4c.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.C7O5_bBb.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'contactsLoader.El1tzQ7g.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
@@ -176,7 +176,7 @@
   <link rel="modulepreload" href="{{ 'index.Bb4qSo10.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'utils.CHtjtCvc.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'Global.DZzDGABG.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'productSlice.CvjiWDym.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'productSlice.2IG3lGDg.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'redux-toolkit.modern.DURh381R.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.CvkgFsrJ.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/features/products/productSlice.js" or path == "react/features/products/productSlice.js" %}
@@ -187,10 +187,10 @@
   <link rel="modulepreload" href="{{ 'customerUtils.C7O5_bBb.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/features/sidebar/TabSwitch.jsx" or path == "react/features/sidebar/TabSwitch.jsx" %}
-  <script src="{{ 'TabSwitch.D6Pw_WRA.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
+  <script src="{{ 'TabSwitch.CnpIJSv9.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
   <link rel="modulepreload" href="{{ 'icons.DHZLH5cu.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'ContactDetail.C4Rpm3un.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'ContactDetail.DosxcL4c.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.C7O5_bBb.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'contactsLoader.El1tzQ7g.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
@@ -199,17 +199,17 @@
   <link rel="modulepreload" href="{{ 'index.Bb4qSo10.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'utils.CHtjtCvc.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'Global.DZzDGABG.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'productSlice.CvjiWDym.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'productSlice.2IG3lGDg.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'redux-toolkit.modern.DURh381R.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.CvkgFsrJ.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/index.jsx" or path == "react/index.jsx" %}
-  <script src="{{ 'index.Bda7gxWA.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
+  <script src="{{ 'index.zWR9OJS8.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
   <link rel="modulepreload" href="{{ 'icons.DHZLH5cu.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'ContactDetail.C4Rpm3un.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'ContactDetail.DosxcL4c.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'Global.DZzDGABG.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'redux-toolkit.modern.DURh381R.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'productSlice.CvjiWDym.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'productSlice.2IG3lGDg.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'edit.BIHAj60A.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.C7O5_bBb.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.CvkgFsrJ.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
@@ -236,22 +236,22 @@
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/redux/store.js" or path == "react/redux/store.js" %}
-  <script src="{{ 'store.aq1KZqIK.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
+  <script src="{{ 'store.CIF2gP8M.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
   <link rel="modulepreload" href="{{ 'redux-toolkit.modern.DURh381R.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'productSlice.CvjiWDym.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'productSlice.2IG3lGDg.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'Global.DZzDGABG.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.CvkgFsrJ.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.C7O5_bBb.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ '_commonjsHelpers.Cpj98o6Y.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/routes/ReactRoot.jsx" or path == "react/routes/ReactRoot.jsx" %}
-  <script src="{{ 'ReactRoot.DMnkXdpO.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
+  <script src="{{ 'ReactRoot.C21cPHs9.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
   <link rel="modulepreload" href="{{ 'icons.DHZLH5cu.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'edit.BIHAj60A.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'contactsLoader.El1tzQ7g.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.C7O5_bBb.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'productSlice.CvjiWDym.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-  <link rel="modulepreload" href="{{ 'ContactDetail.C4Rpm3un.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'productSlice.2IG3lGDg.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+  <link rel="modulepreload" href="{{ 'ContactDetail.DosxcL4c.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.BYzmSUuc.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.Bb4qSo10.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'utils.CHtjtCvc.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
