modify customers-data app-proxy explainer txt,

--- a/snippets/vite-tag.liquid
+++ b/snippets/vite-tag.liquid
@@ -203,7 +203,7 @@
   <link rel="modulepreload" href="{{ 'redux-toolkit.modern.DURh381R.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'customerUtils.CvkgFsrJ.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
 {% elsif path == "/frontend/entrypoints/react/index.jsx" or path == "react/index.jsx" %}
-  <script src="{{ 'index.zWR9OJS8.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
+  <script src="{{ 'index.o4dyPagO.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
   <link rel="modulepreload" href="{{ 'icons.DHZLH5cu.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'index.C8ayVwQI.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
   <link rel="modulepreload" href="{{ 'ContactDetail.DosxcL4c.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
